# ragnar

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile.in  README.md  Readme.md  compton.py  pyproject.toml  pytest.ini  vis.ipynb
.github/workflows/: actions.yml
cmake/: dependencies.cmake  styling.cmake
legacy/: input.toml  simulation.cpp.bak
legacy/physics/: CMakeLists.txt  synchrotron.cpp  synchrotron.hpp
nix/: kokkos.nix  shell.nix
src/: CMakeLists.txt  example.cpp  global.h  input.toml  io.h  main.cpp  pyinterface.cpp  simulation.cpp  simulation.h  tools.h
src/containers/: CMakeLists.txt  array.cpp  array.hpp  bins.cpp  bins.hpp  dimensionals.hpp  distributions.cpp  distributions.hpp  particles.cpp  particles.h  particles.hpp  sim.h  tabulation.cpp  tabulation.hpp
src/examples/: ic.py  sync-prtls.py  synchrotron.py
src/io/: CMakeLists.txt  h5.cpp  h5.hpp  toml.hpp
src/physics/: compton.h  distributions.cpp  distributions.hpp  ic.cpp  ic.hpp  synchrotron.cpp  synchrotron.hpp
src/plugins/: CMakeLists.txt  plugin.hpp  tristan-v2.cpp  tristan-v2.hpp
src/tests/: arrays_bins.py  distributions.py  ic.py  linspace_logspace.py  particles.py  synchrotron.py
src/utils/: CMakeLists.txt  array.cpp  array.h  global.cpp  global.h  snippets.cpp  snippets.h  tabulation.cpp  tabulation.h  types.cpp  types.h
vis/: jones_demo.ipynb  ssc_demo.ipynb
